# attic

./: README.md
archived-ideas/airtable-api/api-http/: Cargo.toml
archived-ideas/airtable-api/api-http/src/: lib.rs
archived-ideas/airtable-api/api-types/: Cargo.toml
archived-ideas/airtable-api/api-types/src/: lib.rs
archived-ideas/axum-rinha-2023-Q3-template-2023-08-29/: Cargo.toml  Insomnia_2023-08-29.json
archived-ideas/axum-rinha-2023-Q3-template-2023-08-29/src/: main.rs  model.rs  result.rs  service.rs
archived-ideas/axum-rinha-2023-Q3-template-2023-08-29/src/api/: mod.rs  root.rs
archived-ideas/axum-rinha-2023-Q3-template-2023-08-29/src/api/users/: create_user.rs  mod.rs
archived-ideas/axum-rinha-2023-Q3-template-2023-08-29/src/repository/: mod.rs
archived-ideas/axum-rinha-2023-Q3-template-2023-08-29/src/repository/users/: create.rs  mod.rs
archived-ideas/brickpack/: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  deny.toml  rustfmt.toml
archived-ideas/brickpack/.cargo/: config.toml
archived-ideas/brickpack/.devcontainer/: Dockerfile  devcontainer.json  install_tooling.sh
archived-ideas/brickpack/.github/workflows/: makefile.yml
archived-ideas/brickpack/src/design-scaffold/: Cargo.toml
archived-ideas/brickpack/src/design-scaffold/src/: lib.rs  oid.rs
archived-ideas/brickpack/src/launcher/: Cargo.toml
archived-ideas/brickpack/src/launcher/src/: app.rs  main.rs
archived-ideas/brickpack/src/web-server/: Cargo.toml
archived-ideas/brickpack/src/web-server/src/: config.rs  lib.rs  server.rs
archived-ideas/brickpack/src/web-ui/: Cargo.toml
archived-ideas/ca-experiments/: .gitignore  Cargo.toml  Insomnia.json  sqlx-data.json
archived-ideas/ca-experiments/migrations/: 20220704184315_initial.sql
archived-ideas/ca-experiments/src/: error.rs  main.rs
archived-ideas/ca-experiments/src/domain/: mod.rs
archived-ideas/ca-experiments/src/domain/entities/: author.rs  book.rs  cart.rs  mod.rs  order.rs
archived-ideas/ca-experiments/src/infrastructure/: mod.rs  router.rs  sqlite.rs
archived-ideas/ca-experiments/src/interface/: mod.rs
archived-ideas/ca-experiments/src/interface/presenters/: mod.rs
archived-ideas/ca-experiments/src/interface/repositories/: mod.rs
archived-ideas/ca-experiments/src/interface/services/: mod.rs  publisher.rs
archived-ideas/ca-experiments/src/usecases/: author.rs  book.rs  mod.rs  publisher.rs
archived-ideas/ca-experiments/tests/interface/presenters/: mod.rs
archived-ideas/calc-rs/: Cargo.toml
archived-ideas/calc-rs/.cargo/: config.toml
archived-ideas/calc-rs/.devcontainer/: Dockerfile  devcontainer.json
archived-ideas/calc-rs/data_files/: hello.json
archived-ideas/calc-rs/misc/: lldb_entrypoint.txt
archived-ideas/calc-rs/src/: helpers.rs  main.rs
archived-ideas/calc-rs/src/app/: mod.rs  plot.rs
archived-ideas/rebox/: .gitignore  Cargo.toml  README.md  flake.nix  shell.nix
archived-ideas/rebox/src/rebox-core/: Cargo.toml
archived-ideas/rebox/src/rebox-core/src/: lib.rs
archived-ideas/rebox/src/rebox-storage/: Cargo.toml
archived-ideas/rebox/src/rebox-storage/examples/: crud.rs  departments.rs  hello.rs
archived-ideas/rebox/src/rebox-storage/src/: lib.rs  tests.rs
archived-ideas/rebox/src/rebox-types/: Cargo.toml
archived-ideas/rebox/src/rebox-types/src/: helpers.rs  lib.rs  test_helpers.rs
archived-ideas/rebox/src/rebox_derive/: Cargo.toml
archived-ideas/rebox/src/rebox_derive/src/: lib.rs
archived-ideas/rebox/xtask/: Cargo.toml
archived-ideas/rebox/xtask/src/: helpers.rs
archived-ideas/rebox/xtask/src/tasks/: build.rs  dist.rs  fuzz_tests.rs  metrics.rs
archived-ideas/remora-investigator-0.1/remora-investigator/background/: Cargo.toml  Makefile  bg-loader.js  firefox-api.js  index.html  sw-wasm.js  sw.js
archived-ideas/remora-investigator-0.1/remora-investigator/background/.cargo/: config.toml
archived-ideas/remora-investigator-0.1/remora-investigator/background/src/: lib.rs
archived-ideas/remora-investigator-0.1/remora-investigator/background/wasm/: background.js  background_bg.wasm  loader.js
archived-ideas/remora-investigator-0.1/remora-manager/src/application-endpoints/: Cargo.toml
archived-ideas/remora-investigator-0.1/remora-manager/src/application-models/: Cargo.toml
archived-ideas/remora-investigator-0.1/remora-manager/src/databases/: Cargo.toml
archived-ideas/remora-investigator-0.1/remora-manager/src/launcher/: .gitignore  Cargo.toml  build.rs
archived-ideas/remora-investigator-dev/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
archived-ideas/remora-investigator-dev/src-tauri/icons/: icon.icns
archived-ideas/remora-investigator-dev/src-tauri/migration/: Cargo.toml
archived-ideas/remora-investigator-dev/src-tauri/src/: helpers.rs  main.rs
archived-ideas/sri-hasher/: Cargo.toml
archived-ideas/sri-hasher/misc/: test_data.txt
archived-ideas/sri-hasher/src/: lib.rs
archived-ideas/sri-hasher/src/sri_hasher/: builder.rs
archived-ideas/stamp-coin/part1/: Cargo.toml
archived-ideas/stamp-coin/part1/src/: hashable.rs  lib.rs  mining.rs  misc.rs  multi_threading_minning.rs
archived-ideas/stamp-coin/part1/tests/: test_blocks.rs
archived-ideas/tricknet/: Cargo.toml  Makefile
archived-ideas/tricknet/scripts/: build.sh
archived-ideas/tricknet/src/: errors.rs  main.rs
archived-ideas/tricknet/src/applets/: mod.rs
archived-ideas/web3-iot-agent-poc/agent/: Cargo.toml  justfile
archived-ideas/web3-iot-agent-poc/agent/src/: data.jsonc
stack/hn-masonry/: Cargo.toml  README.md
stack/hn-masonry/.cargo/: config.toml
stack/hn-masonry/src/: main.rs
stack/hn-masonry/src/model/: mod.rs
stack/hn-masonry/src/ui/: mod.rs
stack/hn-vizia/: Cargo.toml  README.md
stack/hn-vizia/.cargo/: config.toml
stack/hn-vizia/.github/workflows/: rust.yml
stack/hn-vizia/src/: main.rs
stack/hn-vizia/src/ui/: mod.rs
stack/masonry-template/: Cargo.toml
stack/masonry-template/src/: main.rs
stack/rust-http-client-debugger/http-client/: Cargo.toml
stack/rust-http-client-debugger/http-client/src/: main.rs
(+792 files in other folders)
