[package]
name = "ca-experiments"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.19.2", features = ["full"] }
tower = { version = "0.4.13", features = ["util"] }

anyhow = "1.0.58"
axum = { version = "0.5.11" }
tracing = "0.1.35"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1.56"
# axum-macros = "0.2.3"
sqlx = { version = "0.6.0", features = [
    "sqlite",
    "runtime-tokio-rustls",
    "offline",
] }
serde = { version = "1.0.138", features = ["derive"] }
serde_json = "1.0.82"
tower-http = { version = "0.3.4", features = ["trace"] }
thiserror = "1.0.31"

[dev-dependencies]
reqwest = "0.11.11"
