[package]
publish = false
name = "calc-rs"
version = "0.0.1"
edition = "2021"

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.2.5", features = ["cargo", "env"] }
plotlib = "0.5.1"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.0", features = ["full", "tracing"] }
