[workspace]
members = ["src/*", "xtask/", "fuzzer/"]

[workspace.package]
publish = false
edition = "2021"
rust-version = "1.70.0"
authors = ["http://github.com/ancos2505"]
license = "MIT"

[profile.dev]
opt-level = 0
lto = false
debug = true
debug-assertions = true

[profile.release]
opt-level = 3
lto = true
debug = false
debug-assertions = false
strip = true

[profile.bench]
opt-level = 3
lto = true
debug = false
debug-assertions = false

[profile.test]
opt-level = 0
lto = false
debug = true
debug-assertions = true
# [patch.'crates-io']

[workspace.dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.5", features = ["derive"] }
bytes = "1.4.0"
humantime = "2.1.0"
bincode = "2.0.0-rc.3"
rkv = "0.18.4"
chrono = { version = "0.4.26", default-features = false }
json_to_table = { version = "0.5.0" }
test-case = "3.1.0"
serde = { version = "1.0.173", features = ["derive"] }
serde_json = { version = "1.0.103" }
tabled = "0.12.2"
ulid = "1.0.0"
hex = "0.4.3"
md-5 = "0.10.5"
# serde = { version = "1.0.164", features = ["derive"] }
# chrono = { version = "0.4.26", default-features = false, features = [
#     "serde",
#     "clock",
# ] }
# tokio = { version = "1.28.1", features = ["full", "tracing"] }
# tracing = "0.1.37"
