[package]
name = "sri-hasher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
sha2 = "0.10.8"
hex = "0.4.3"
base64 = "0.22.0"
clap = { version = "4.5.4", features = ["derive"] }



