[package]
name = "tricknet"
version = "0.1.0"
authors = ["https://github.com/ancos2505"]
description = "Do some useful things with UDP"
edition = "2018"


[dependencies]
des = "0.6.0"
md5 = "0.7.0"
rand = "0.8.0"


[profile.release]
lto = true

debug = false
panic = "abort"
opt-level = "z"
codegen-units = 1
