[package]
name = "airtable-api"
description = "An API client for Airtable"
version = "0.1.35"
authors = ["Jess Frazelle <jess@oxide.computer>"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/oxidecomputer/cio"
documentation = "https://docs.rs/airtable-api"


[dependencies]
anyhow = "1"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
airtable-api-types = { path = "../api-types" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "0.11", features = ["json"] }
reqwest-middleware = "0.1.5"
reqwest-retry = "0.1.4"
reqwest-tracing = { version = "0.2.1", features = ["opentelemetry_0_17"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
worker = "0.0.9"
