[package]
name = "airtable-api-types"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = "1.0.57"
chrono = { version = "0.4.19", features = ["serde"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
schemars = { version = "0.8", features = ["chrono", "uuid"] }
