[package]
name = "app"
version = "0.2.1"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.70"

[profile.release]
panic = "abort"   # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true        # Enables link to optimizations
opt-level = "s"   # Optimize for binary size
strip = true      # Remove debug symbols

[build-dependencies]
tauri-build = { version = "1.4.0", features = [] }

[dependencies]
serde_json = "1.0.102"
serde = { version = "1.0.171", features = ["derive"] }
tauri = { version = "1.4.0", features = [
    "devtools",
    "dialog-all",
    "fs-create-dir",
    "fs-exists",
    "fs-read-file",
    "fs-write-file",
] }
tokio = { version = "1.28.2", features = ["full"] }
anyhow = "1.0.71"
base64 = "0.21.2"
chromiumoxide = { git = "https://github.com/mattsse/chromiumoxide", branch = "main", default-features = false, features = [
    "tokio",
    "tokio-runtime",
] }
futures = "0.3.28"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
sea-orm = { version = "0.11.3", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "debug-print",
    "macros",
    "with-chrono",
] }
sea-orm-migration = { version = "0.11.3", features = ["runtime-tokio-rustls"] }
migration = { path = "./migration" }
url = { version = "2.4.0", features = ["serde"] }
chrono = { version = "0.4.26", features = ["serde"] }


[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
