[package]
name = "part1"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = "1.0.56"
byteorder = "1.4.3"
hex = "0.4.3"
sha2 = "0.10.2"
bincode = "1.3.3"
serde = { version = "1.0.136", features = ["derive"] }
sysinfo = "0.23.6"
base64 = "0.13.0"
num_cpus = "1.13.1"

[dev-dependencies]
rand = "0.8.5"
# [profile.release]
# strip = true
