[package]
publish = false
edition = "2021"
rust-version = "1.69.0"

name = "design-scaffold"
version = "0.0.8"

authors = ["http://github.com/ancos2505"]
license = "MIT"


[dependencies]
anyhow = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }

sha2 = "0.10.6"
ulid = "1.0.0"
rand = "0.8.5"
