[package]
publish = false
edition = "2021"
rust-version = "1.69.0"

name = "web-server"
version = "0.0.6"

authors = ["http://github.com/ancos2505"]
license = "MIT"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

design-scaffold = { path = "../design-scaffold" }

axum = { version = "0.6.18", features = [
    "tracing",
    "ws",
    "http2",
    "headers",
    "multipart",
] }
hostname-validator = "1.1.1"
