[package]
name = "rebox-core"
version = "0.0.1"
publish.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
rebox-types = { path = "../rebox-types" }
rebox-storage = { path = "../rebox-storage" }

[dev-dependencies]
clap = { workspace = true }
test-case = { workspace = true }
