[package]
name = "rebox-storage"
version = "0.0.1"
publish.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true


[dependencies]
anyhow = { workspace = true }
bytes = { workspace = true }
rebox-types = { path = "../rebox-types" }
rebox_derive = { path = "../rebox_derive" }
bincode = { workspace = true }
rkv = { workspace = true }
serde = { workspace = true }
tempfile = "3.6.0"

[dev-dependencies]
test-case = { workspace = true }
chrono = { workspace = true, features = ["clock"] }
json_to_table = { workspace = true }
serde_json = { workspace = true }
tabled = { workspace = true }
ulid = { workspace = true }
hex = { workspace = true }
md-5 = { workspace = true }
