[package]
name = "rebox-types"
version = "0.0.1"
publish.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
rebox_derive = { path = "../rebox_derive" }
anyhow = { workspace = true }
bincode = { workspace = true }
bytes = { workspace = true }
rkv = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
test-case = { workspace = true }
