[package]
name = "background"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
base64 = "0.13.0"
serde = { version = "1.0.127", features = ["derive"] }
serde_json = "1.0.66"
sha1 = "0.6.0"
wasm-bindgen = "0.2.76"


[profile.dev]
opt-level = 0
lto       = false
debug     = true

[profile.release]
opt-level = 3
lto       = true
debug     = false

[profile.bench]
opt-level = 3
lto       = true
debug     = false

[profile.test]
opt-level = 0
lto       = false
debug     = true