[package]
authors = ["http://github.com/ancos2505"]
edition = "2018"
license = "MIT"
name = "application-endpoints"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
application-models = {path = "../application-models"}
chrono = "0.4.19"
databases = {path = "../databases"}
log = {version = "0.4.14", features = ["kv_unstable", "std"]}
mvp-scaffold = {path = "../mvp-scaffold"}
r2d2 = "0.8.9"
r2d2_sqlite = "0.18.0"
serde = {version = "1.0.130", features = ["derive"]}
serde_json = "1.0.68"
tide = "0.16.0"
url = "2.2.2"
jsonxf = "1.1.1"
base64 = "0.13.0"

[dependencies.rusqlite]
features = ['bundled']
version = '0.25.3'
