[package]
authors = ["http://github.com/ancos2505"]
edition = "2018"
license = "MIT"
name = "application-models"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mvp-scaffold = { path = "../mvp-scaffold" }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
tide = "0.16.0"
log = { version = "0.4.14", features = ["kv_unstable", "std"] }

[dependencies.rusqlite]
features = ['bundled']
version = '0.25.3'
