[package]
authors = ["user"]
edition = "2018"
license = "MIT"
name = "databases"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
log = {version = "0.4.14", features = ["kv_unstable", "std"]}
mvp-scaffold = {path = "../mvp-scaffold"}
r2d2 = "0.8.9"
r2d2_sqlite = "0.18.0"
tide = "0.16.0"
url = "2.2.2"

[dependencies.rusqlite]
features = ['bundled']
version = '0.25.3'
