[package]
authors = ["http://github.com/ancos2505"]
edition = "2018"
license = "MIT"
name = "launcher"
version = "0.1.92"

[[bin]]
name = "remora-manager"
path = "src/main.rs"

[dependencies]
async-std = {version = "1.10.0", features = ["attributes"]}
log = {version = "0.4.14", features = ["kv_unstable", "std"]}
mvp-scaffold = {path = "../mvp-scaffold"}
tide = "0.16.0"
# serde = { version = "1.0.125", features = ["derive"] }
clap = "2.33.3"
femme = "2.1.1"
web-server = {path = "../web-server"}
# serde_json = "1.0.64"
# r2d2_sqlite = "0.18.0"
# r2d2 = "0.8.9"
# tide-rustls = "0.3.0"
# chrono = "0.4.19"

# [dependencies.rusqlite]
# features = ['bundled']
# version = '0.25.0'

# [build-dependencies]
# regex = "1.4.5"

# [dev-dependencies]
# surf = {version = "2.2.0", default-features = false, features = ["h1-client-rustls"] }

[build-dependencies]
regex = "1.5.4"
