[package]
authors = ["http://github.com/ancos2505"]
edition = "2018"
license = "MIT"
name = "web-server"
version = "0.1.0"

[dependencies]
application-endpoints = {path = "../application-endpoints"}
clap = "2.33.3"
databases = {path = "../databases"}

frontend = {path = "../frontend"}
log = {version = "0.4.14", features = ["kv_unstable", "std"]}
mvp-scaffold = {path = "../mvp-scaffold"}
serde = {version = "1.0.130", features = ["derive"]}
tide = "0.16.0"
tide-rustls = "0.3.0"
# async-std = { version = "1.9.0", features = ["attributes"] }

# serde_json = "1.0.64"
# r2d2_sqlite = "0.18.0"
# r2d2 = "0.8.9"

# chrono = "0.4.19"

# [dependencies.rusqlite]
# features = ['bundled']
# version = '0.25.0'

[build-dependencies]
regex = "1.5.4"

[dev-dependencies]
async-std = {version = "1.10.0", features = ["attributes"]}
# async-std = {version = "1.9.0", default-features = false}
surf = {version = "2.3.1", default-features = false, features = ["h1-client-rustls"]}
url = {version = "2.2.2"}
criterion = "0.3.5"

[[bench]]
name = "add_user"
harness = false

[[bench]]
name = "update_user"
harness = false
